@@ -74,6 +74,8 @@ and runping via mahadev)
   ZOOKEEPER-267.  java client incorrectly generating syncdisconnected event when in disconnected state. (pat via breed)
 
   ZOOKEEPER-263. document connection host:port as comma separated list in forrest docs (pat via breed)
+  
+  ZOOKEEPER-275. Bug in FastLeaderElection. (flavio via mahadev)
  
 IMPROVEMENTS:
    
